# cpp_cmake_template

./: .clang-format  .clang-tidy  .clangd  CMakeLists.txt  CMakePresets.json  Makefile  README.md
src/: CMakeLists.txt  main.cpp
test/: README.md
